git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@864 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/restore.html.haml
+++ b/app/views/company/restore.html.haml
@@ -1,3 +1,6 @@
+-if @new_code
+  %h2=tc(:your_new_code_is, :value=>@new_code)
+
 -form_tag({}, :multipart=>true) do
   =formalize do |f|
     -f.field tc(:download), file_field(:backup, :path)
