git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@867 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/statements_display.html.haml
+++ b/app/views/accountancy/statements_display.html.haml
@@ -1,5 +1,5 @@
-= aclist do |l|
-  - l.action :statements
+=toolbar do
+  -link :statements
 
 =evalue(@bank_account_statement, :number)
 =evalue(@bank_account_statement.bank_account, :name)
