--- a/app/views/accountancy/statements_point.html.haml
+++ b/app/views/accountancy/statements_point.html.haml
@@ -1,6 +1,6 @@
-= aclist do |l|
-  - l.action :statements_display, :id=>@bank_account_statement.id
-  - l.action :statements
+=toolbar do
+  - link :statements_display, :id=>@bank_account_statement.id
+  - link :statements
 
 %table.dyta
   %tr
