--- a/app/views/company/restore.html.haml
+++ b/app/views/company/restore.html.haml
@@ -1,6 +1,10 @@
+=toolbar do
+  -link :backup
+
 -if @new_code
   %h2=tc(:your_new_code_is, :value=>@new_code)
 
+%h2=tc :import_backup
 -form_tag({}, :multipart=>true) do
   =formalize do |f|
     -f.field tc(:download), file_field(:backup, :path)
