--- a/app/views/management/products_display.html.haml
+++ b/app/views/management/products_display.html.haml
@@ -1,6 +1,6 @@
-= aclist do |l|
-  - l.action :products_update, :id=>@product.id
-  - l.action :products
+= toolbar
+  - link :products_update, :id=>@product.id
+  - link :products
 
 %table
   %tr
