--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -1,6 +1,6 @@
-= aclist do |l|
-  - l.action :entities_update, :id=>@entity.id
-  -# l.action :entities_print, :id=>@entity.id
+= toolbar do
+  - link :entities_update, :id=>@entity.id
+  - link :entities_print, :id=>@entity.id
 
 <!-- =itemize(:entity) do |t| -->
 <!--   -t.item :name -->
