--- a/app/views/relations/entity_categories_display.html.haml
+++ b/app/views/relations/entity_categories_display.html.haml
@@ -1,5 +1,5 @@
-= aclist do |l|
-  - l.action :entity_categories_update, :id=>@entity_category.id
+= toolbar do
+  - link :entity_categories_update, :id=>@entity_category.id
 
 %table
   %tr
