--- a/app/views/management/sales_deliveries.html.haml
+++ b/app/views/management/sales_deliveries.html.haml
@@ -1,7 +1,7 @@
 =sales_steps
 
-= aclist do |l|
-  - l.action :sales_print, :id=>@sale_order.id
+= toolbar do
+  - link :sales_print, :id=>@sale_order.id
 
 %h2=tc :undelivered
 =dyta :undelivered_quantities
