--- a/app/views/management/stocks_locations_display.html.haml
+++ b/app/views/management/stocks_locations_display.html.haml
@@ -1,6 +1,6 @@
-= aclist do |l|
-  - l.action :stocks_locations_update, :id=>@stock_location.id
-  - l.action :stocks_locations
+= toolbar do
+  - link :stocks_locations_update, :id=>@stock_location.id
+  - link :stocks_locations
 
 %table
   %tr
@@ -19,4 +19,6 @@
         =evalue @stock_location, :quantity_max
 
 %h2=tc :moves
+=toolbar do
+  -link :stocks_moves_create
 =dyta :stock_moves
