git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@868 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/accountancy/entries.html.haml
+++ b/app/views/accountancy/entries.html.haml
@@ -1,8 +1,8 @@
 - if @valid
   %h1=tc(:subtitle, :journal=>@journal.name, :financialyear=>@financialyear.code)
 - if @valid
-  #update_params.aclist
-    =link_to_function tc(:update_params), "$('params').show(); $('update_params').hide();", :class=> 'procedure create'
+  #update_params.toolbar
+    =link_to_function tc(:update_params), "$('params').show(); $('update_params').hide();"
 #params.fore
   - form_tag(:action => :params_entries) do
     =formalize do |f|
