--- a/app/views/accountancy/entries_consult.html.haml
+++ b/app/views/accountancy/entries_consult.html.haml
@@ -1,4 +1,4 @@
-.aclist
+.toolbar
   - form_tag do
     =formalize do |f|
       - f.field :journal_record, :journal_id, :choices=>@journals.collect{|j| [tc(:journal_x, :name=>j.name, :closed_on=>j.closed_on.to_s), j.id]}, :options=>{:include_blank=>tc(:all_journals)}
