--- a/app/views/accountancy/statements.html.haml
+++ b/app/views/accountancy/statements.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  =link_to tc('statements_create'), {:action=>:statements_create}, :class=>'procedure create'
+=toolbar do
+  -link :statements_create
 =dyta(:bank_account_statements)
