--- a/app/views/guide/about_us.html.haml
+++ b/app/views/guide/about_us.html.haml
@@ -1,5 +1,4 @@
-%p
-  =image_tag "logos.png"
-
-
-=link_to "www.ekylibre.org", "http://www.ekylibre.org"
+#about_us{:style=>'text-align: center; padding: 64px;'}
+  %p
+    =image_tag "logos.png"
+  =link_to "www.ekylibre.org", "http://www.ekylibre.org"
