--- a/app/views/management/delivery_modes.html.haml
+++ b/app/views/management/delivery_modes.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  =link_to tc('delivery_modes_create'), {:action=>:delivery_modes_create}, :class=>'procedure create'
+=toolbar do
+  -link :delivery_modes_create
 =dyta :delivery_modes
