--- a/app/views/production/productions.html.haml
+++ b/app/views/production/productions.html.haml
@@ -1,4 +1,3 @@
-<!-- %h2= tc('productions') -->
-.aclist
-  =link_to tc('productions_create'), {:action=>:productions_create}, :class=>'procedure create'
+=toolbar do
+  -link :productions_create
 =dyta :productions
