--- a/app/views/production/shapes.html.haml
+++ b/app/views/production/shapes.html.haml
@@ -1,4 +1,3 @@
-<!-- %h2= tc 'shapes' -->
-.aclist
-  = link_to tc('shapes_create'), :action=>:shapes_create, :class=>'procedure create'
+=toolbar do
+  -link :shapes_create
 =dyta :shapes
