--- a/app/views/resources/professions.html.haml
+++ b/app/views/resources/professions.html.haml
@@ -1,2 +1,3 @@
-.aclist=link_to tc(:professions_create), {:action=>:professions_create}, :class=>'procedure create'
+=toolbar do
+  -link :professions_create
 =dyta(:professions)
