--- a/app/views/accountancy/accounts.html.haml
+++ b/app/views/accountancy/accounts.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  =link_to tc('accounts_create'), {:action=>:accounts_create}, :class=>'procedure create'
+=toolbar do
+  -link :accounts_create
 =dyta(:accounts)
