--- a/app/views/accountancy/bank_accounts.html.haml
+++ b/app/views/accountancy/bank_accounts.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  =link_to tc('bank_accounts_create'), {:action=>:bank_accounts_create}, :class=>'procedure create'
+=toolbar do
+  -link :bank_accounts_create
 =dyta(:bank_accounts)
