--- a/app/views/accountancy/financialyears.html.haml
+++ b/app/views/accountancy/financialyears.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  =link_to tc('financialyears_create'), {:action=>:financialyears_create}, :class=>'procedure create'
+=toolbar do
+  -link :financialyears_create
 =dyta(:financialyears)
