--- a/app/views/accountancy/journals.html.haml
+++ b/app/views/accountancy/journals.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  =link_to tc('journals_create'), {:action=>:journals_create}, :class=>'procedure create'
+=toolbar do
+  -link :journals_create
 =dyta(:journals)
