--- a/app/views/company/index.html.haml
+++ b/app/views/company/index.html.haml
@@ -1,4 +1,5 @@
 =toolbar do
+  - link :entities_update, {:controller=>:relations, :id=>@company.entity_id}
   - link :update
   - link :backup
   - link :restore
@@ -12,18 +13,18 @@
   =# evalue tc(:users_number ) ,@users.size, :url=>{:action=>:users}
 
 %h2= tc :users
-.aclist
-  =link_to tc('users_create'), {:action=>:users_create}, :class=>'procedure create'
+=toolbar do
+  -link :users_create
 =dyta :users
 %h2= tc(:roles)
-.aclist
-  =link_to tc('roles_create'), {:action=>:roles_create}, :class=>'procedure create'
+=toolbar do
+  -link :roles_create
 =dyta :roles
 %h2= tc :establishments
-.aclist
-  =link_to tc('establishments_create'), {:action=>:establishments_create}, :class=>'procedure create'
+=toolbar do
+  -link :establishments_create
 =dyta :establishments
 %h2= tc :departments
-.aclist
-  =link_to tc('departments_create'), {:action=>:departments_create}, :class=>'procedure create'
+=toolbar do
+  -link :departments_create
 =dyta :departments
