--- a/app/views/guide/index.html.haml
+++ b/app/views/guide/index.html.haml
@@ -1,4 +1,4 @@
-.aclist.indicator
+.menu.indicator
   %h2= tc('performance_indicator')
   %ul
     =li_link_to tc('nb_entities',:count=>@entities.size), :controller=>:relations, :action=>:entities
