--- a/app/views/management/embankments.html.haml
+++ b/app/views/management/embankments.html.haml
@@ -1,8 +1,7 @@
 .count=tc(:nb_checks, :count=>@current_company.checks_to_embank(0).size)
 
--if @current_company.checks_to_embank(0).size > 0
-  .aclist
-    =link_to tc('embankments_create'), {:action=>:embankments_create}, :class=>'procedure create'
+=toolbar do
+  -link(:embankments_create) if @current_company.checks_to_embank(0).size > 0
 =dyta :embankments
 
 
