--- a/app/views/management/stock_transfers.html.haml
+++ b/app/views/management/stock_transfers.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  =link_to tc('stock_transfers_create'), {:action=>:stock_transfers_create}, :class=>'procedure create'
+=toolbar do
+  -link :stock_transfers_create
 =dyta :stock_transfers
