--- a/app/views/management/taxes.html.haml
+++ b/app/views/management/taxes.html.haml
@@ -1,3 +1,3 @@
-.aclist 
-  =link_to tc('taxes_create'), {:action=>:taxes_create}, :class=>'procedure create'
+=toolbar do
+  -link :taxes_create
 =dyta :taxes
