--- a/app/views/production/index.html.haml
+++ b/app/views/production/index.html.haml
@@ -1,4 +1,4 @@
-.aclist.indicator
+.menu.indicator
   %h2= tc('indicator')
   %ul
     %li= link_to tc('nb_operations', :count=>@shape_operations.size), :action=>:unvalidated_operations
