--- a/app/views/production/shape_operation_natures.html.haml
+++ b/app/views/production/shape_operation_natures.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  = link_to tc('shape_operation_natures_create'), :action=>:shape_operation_natures_create, :class=>'procedure create'
+=toolbar do
+  -link :shape_operation_natures_create
 =dyta :shape_operation_natures
