--- a/app/views/production/shape_operations.html.haml
+++ b/app/views/production/shape_operations.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  = link_to tc('shape_operations_create'), :action=>:shape_operations_create, :class=>'procedure create'
+=toolbar do
+  -link :shape_operations_create
 =dyta :shape_operations
