--- a/app/views/relations/entities.html.haml
+++ b/app/views/relations/entities.html.haml
@@ -2,10 +2,10 @@
 
 =render :partial=>'entities_search'
 
-.aclist
-  %ul
-    %li=link_to tc('entities_create'), {:action=>:entities_create}, :class=>'procedure create'
-    %li=link_to tc('entities_export'), {:action=>:entities_export}
-    %li=link_to tc('entities_import'), {:action=>:entities_import}
+=toolbar do
+  -link :entities_create
+  -link :entities_export
+  -link :entities_import
+
 =dyta :entities
    
