--- a/app/views/relations/entity_categories.html.haml
+++ b/app/views/relations/entity_categories.html.haml
@@ -1,3 +1,3 @@
-.aclist 
-  =link_to tc('entity_categories_create'), {:action=>:entity_categories_create}, :class=>'procedure create'
+=toolbar do
+  -link :entity_categories_create
 =dyta :entity_categories
