--- a/app/views/relations/entity_categories_display.html.haml
+++ b/app/views/relations/entity_categories_display.html.haml
@@ -9,6 +9,6 @@
       =evalue @entity_category, :description
     
 %h2=tc :prices, :count=>@category_prices_count
-.aclist
-  = link_to tc('prices_create'), {:controller=>:management, :action=>:prices_create, :mode=>:sales}, :class=>'procedure create'
+=toolbar do
+  -link :prices_create, {:controller=>:management, :mode=>:sales}
 =dyta :category_prices
