--- a/app/views/relations/meeting_locations.html.haml
+++ b/app/views/relations/meeting_locations.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  = link_to tc('meeting_locations_create'), {:action=>:meeting_locations_create}, :class=>'procedure create'
+=toolbar do
+  -link :meeting_locations_create
 =dyta :meeting_locations
