--- a/app/views/relations/meetings.html.haml
+++ b/app/views/relations/meetings.html.haml
@@ -1,3 +1,3 @@
-.aclist
-  = link_to tc('meetings_create'), {:action=>:meetings_create}, :class=>'procedure create'
+=toolbar do
+  -link :meetings_create
 =dyta :meetings
