--- a/app/views/shared/_menu_index.html.haml
+++ b/app/views/shared/_menu_index.html.haml
@@ -3,7 +3,7 @@
   - list[:list].each do |action| 
     - display = true if controller.accessible? action[:url]||{:action=>action[:name]}
   - if display
-    %div{:class=>'aclist '+list[:class].to_s}
+    %div{:class=>"menu"+(list[:class].nil? ? "" : " "+list[:class].to_s)}
       %h2=t("views.#{self.controller.controller_name}.index.#{list[:name].to_s}")
       %ul
         - for action in list[:list]
